# shellquest

./: .gitignore  LICENSE  QUICKSTART.md  README.md  TEST_SCENARIOS.md  install.sh  pyproject.toml  requirements.txt
data/: achievements.yaml
data/commands/: essential.yaml
data/mystery/: case_001.yaml  case_002.yaml  case_003.yaml  case_004.yaml  case_005.yaml  case_006.yaml  case_007.yaml  case_008.yaml  case_009.yaml  case_010.yaml
data/questions/: advanced_questions.yaml  essential_questions.yaml
data/story/: chapters.yaml
shellquest/: __main__.py
shellquest/core/: battle_engine.py  game_engine.py  mystery_engine.py  quiz_engine.py  quiz_handler.py  scoring_system.py  state_manager.py  story_engine.py  training_handler.py
shellquest/data/: loader.py  validator.py
shellquest/models/: achievement.py  command.py  player.py  question.py
shellquest/ui/: components.py  theme.py
shellquest/utils/: __init__.py
tests/: __init__.py  test_battle_e2e.py  test_battle_engine.py  test_data_validation.py  test_mystery_engine.py  test_performance.py  test_player.py  test_question.py  test_quiz_engine.py  test_scoring_system.py  test_state_manager.py  test_story_engine.py  test_utils.py
